Ejercicios/Modulo11/modulo11-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: rbac-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
